--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,12 +7,12 @@
   "description": "Help Dogify the web.",
 
   "version": "1.0",
-  
+
    "background": {
       "scripts": ["popup.js"],
-      "persistent": false
+      "persistent": false,
     },
-    
+
    "page_action": {
       "default_popup": "popup.html",
       "default_icon": {
