added the beginnings of popup.js script

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,9 +13,9 @@
       "persistent": false
     },
 
-   "permissions": ["declarativeContent", "storage"],
+   "permissions": ["declarativeContent", "storage", "activeTab"],
 
-   "page_action": {
+   "browser_action": {
       "default_popup": "popup.html",
       "default_icon": {
         "16": "img/dogify16.png",
