Updated so that dogify.js runs when page loads

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,13 @@
       "persistent": false
     },
 
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js": ["dogify.js"]
+      }
+    ],
+
    "permissions": ["declarativeContent", "storage", "activeTab"],
 
    "browser_action": {
