--- a/src/chrome/dogify/manifest.json
+++ b/src/chrome/dogify/manifest.json
@@ -8,11 +8,6 @@
 
   "version": "1.0",
 
-   "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
@@ -20,7 +15,7 @@
       }
     ],
 
-   "permissions": ["declarativeContent", "storage", "activeTab"],
+   "permissions": ["declarativeContent", "activeTab"],
 
    "browser_action": {
       "default_popup": "popup.html",
