--- a/src/chrome/dogify/manifest.json
+++ b/src/chrome/dogify/manifest.json
@@ -15,7 +15,7 @@
       }
     ],
 
-   "permissions": ["declarativeContent", "activeTab"],
+   "permissions": ["activeTab"],
 
    "browser_action": {
       "default_popup": "popup.html",
